# vala-language-server

./: .gitignore  meson.build
formatting/expected/: test_binary_ops.vala  test_indent_after_namespace.vala  test_indentation.vala  test_modifiers.vala  test_slice.vala
formatting/input/: test_binary_ops.vala  test_indent_after_namespace.vala  test_indentation.vala  test_modifiers.vala  test_slice.vala
plugins/gnome-builder/: vala_langserv.py
src/: analytics.vala  meson.build  protocol.vala  server.vala
src/codeaction/: implementnamedconstructoraction.vala
src/codehelp/: codeaction.vala  symbolvisitor.vala
src/formatter/: Formatter.vala  formatter.vala  formattingConfig.vala  formattingVisitor.vala  mergedtokens.vala  tokenformatter.vala  tokenizer.vala  tokenmerger.vala
src/projects/: ccproject.vala  compilation.vala  defaultproject.vala  mesonproject.vala  project.vala
test/: formattingtest.vala  meson.build  tokenizer_test.vala
